fix(ie font): Fix material font on IE (#134)
* fix(ie font): Fix material font on IE

--- a/src/css/material-icons.styl
+++ b/src/css/material-icons.styl
@@ -1,14 +1,13 @@
-/* fallback */
 @font-face {
   font-family: 'Material Icons';
   font-style: normal;
   font-weight: 400;
-  src:
-    local('Material Icons'),
-    local('MaterialIcons-Regular'),
-    url(../assets/fonts/MaterialIcons-Regular.woff2) format('woff2'),
-    url(../assets/fonts/MaterialIcons-Regular.woff) format('woff'),
-    url(../assets/fonts/MaterialIcons-Regular.ttf) format('truetype');
+  src: url(../assets/fonts/MaterialIcons-Regular.eot); /* For IE6-8 */
+  src: local('Material Icons'),
+       local('MaterialIcons-Regular'),
+       url(../assets/fonts/MaterialIcons-Regular.woff2) format('woff2'),
+       url(../assets/fonts/MaterialIcons-Regular.woff) format('woff'),
+       url(../assets/fonts/MaterialIcons-Regular.ttf) format('truetype');
 }
 
 .material-icons {
@@ -16,13 +15,23 @@
   font-weight: normal;
   font-style: normal;
   font-size: 24px;
-  line-height: 1;
-  letter-spacing: normal;
-  text-transform: none;
   display: inline-block;
-  white-space: nowrap;
+  line-height: 1;
+  text-transform: none;
+  letter-spacing: normal;
   word-wrap: normal;
+  white-space: nowrap;
   direction: ltr;
-  -webkit-font-feature-settings: 'liga';
+
+  /* Support for all WebKit browsers. */
   -webkit-font-smoothing: antialiased;
+  /* Support for Safari and Chrome. */
+  text-rendering: optimizeLegibility;
+
+  /* Support for Firefox. */
+  -moz-osx-font-smoothing: grayscale;
+
+  /* Support for IE. */
+  font-feature-settings: 'liga' 1;
+  -ms-font-feature-settings: 'liga' 1;
 }
